--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h2>
 <a id="welcome-to-jessica-kents-portfolio" class="anchor" href="#welcome-to-jessica-kents-portfolio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Jessica Kent's Portfolio</h2>
 
-<h1>
+<h1>0
 <a id="resume" class="anchor" href="#resume" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resume</h1>
 
 <p>Jessica Kent
@@ -54,12 +54,12 @@ Upon Request.</p>
 <h3>
 <a id="skills" class="anchor" href="#skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skills</h3>
 
-<p>Java,SQL,Microsoft Word, Microsoft Ppt, Excel, Visual Studio, NetBeans IDE,Linux.</p>
+<p>Java,SQL,Microsoft Word, Microsoft Ppt, Excel, Visual Studio, NetBeans IDE,Linux, AWS Server, Java FX, and many more.</p>
 
 <h3>
 <a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h3>
 
-<p>I am a student at Mansfield University currently in my senior year studying CIS. </p>
+<p>I am a graduating student at Mansfield University with a major in CIS. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/kentj09/portfolio">Jessica&#39;s Portfolio</a> is maintained by <a href="https://github.com/kentj09">kentj09</a>.</span>
